# evicoDB

./: README.md  docker-compose.yml  pyproject.toml
.agents/: AGENTS.md
.agents/skills/vertex_ai_pydantic_schema/: SKILL.md
annotator/: .gitignore  evaluate.py  extract.py  requirements.txt
annotator/prompts/: prompt-example.txt
mysql/init/: schema.sql
