[project]
name = "evicodb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yosuke Onoue", email = "onoue@likr-lab.com" }
]
dependencies = [
    "google-cloud-aiplatform>=1.158.0",
    "python-dotenv>=1.2.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
